--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,10 @@ h3{
 .btn{
   width:100%;
 }
+
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: -10px;
+  margin-bottom: 10px;
+}
